--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -13,7 +13,11 @@
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
-    <div class="item">내 화면</div>
+    <div class="item">
+      <!-- 디바이스 카메라 연결-->
+      <video autoplay playsinline></video>
+      <script src="main.js"></script>
+    </div>
     <div class="item">공유자 화면</div>
     <div class="item">설정</div>
   </div>
