카메라 시작 버튼 추가

--- a/Webpage/main.html
+++ b/Webpage/main.html
@@ -9,10 +9,12 @@
 <body>
   <h1><a href="index.html">Learning Point</a></h1>
   <div class="container">
+
+    <button id="startButton">Start</button>
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
-    <div class="item">4</div>
+
     <div class="item">
       <!-- 디바이스 카메라 연결-->
       <video autoplay playsinline></video>
