--- a/Webpage Step01/main.html
+++ b/Webpage Step01/main.html
@@ -8,17 +8,21 @@
 
 <body>
   <h1><a href="index.html">Learning Point</a></h1>
+  <button id="startButton">Start</button>
+  <button id="callButton">Call</button>
+  <button id="hangupButton">Hang Up</button>
   <div class="container">
 
-    <button id="startButton">Start</button>
+    <div class="item">
+      <video id="remoteVideo" autoplay playsinline></video>
+    </div>
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
 
     <div class="item">
       <!-- 디바이스 카메라 연결-->
-      <video autoplay playsinline></video>
-      <script src="main.js"></script>
+      <video id="localVideo" autoplay playsinline></video>
     </div>
     <div class="item">공유자 화면</div>
     <div class="item">설정</div>
@@ -26,6 +30,7 @@
   <p>
     by KOREA AEROSPACE UNIVERSITY
   </p>
+  <script src="main.js"></script>
 </body>
 
 </html>
