--- a/Webpage Step01/main.html
+++ b/Webpage Step01/main.html
@@ -30,6 +30,7 @@
   <p>
     by KOREA AEROSPACE UNIVERSITY
   </p>
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="main.js"></script>
 </body>
 
