css 적용안 된 오류 해결. aws 정적 웹 호스팅으로 url 생성.

--- a/Webpage Step01/main.html
+++ b/Webpage Step01/main.html
@@ -3,7 +3,7 @@
 <head>
   <title>Learning Point</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style_main.css">
+  <link rel="stylesheet" href="css/style_main.css">
 </head>
 
 <body>
