--- a/Webpage Step01/index.html
+++ b/Webpage Step01/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Learning Point</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style_index.css">
+  <link rel="stylesheet" href="css/style_index.css">
 </head>
 <body>
   <h1><a href="index.html">Learning Point</a></h1>
