--- a/Webpage_test_2/main.html
+++ b/Webpage_test_2/main.html
@@ -3,7 +3,7 @@
 <head>
   <title>Learning Point</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -16,6 +16,8 @@
     <div></div>
     <div></div>
   </div>
+  <script src='/socket.io/socket.io.js'></script>
+  <script src='js/main.js'></script>
 </body>
 
 </html>
