--- a/Webpage_test/main.html
+++ b/Webpage_test/main.html
@@ -8,8 +8,8 @@
 
 <body>
   <div id="index">
-    <div>내화면</div>
-    <div>사용자화면</div>
+    <div><video id="left_cam" autoplay playsinline></video></div>
+    <div><video id="right_cam" autoplay playsinline></div>
   </div>
   <div id="camera">
     <!-- 카메라 넣기 -->
