--- a/Webpage Step01/main.html
+++ b/Webpage Step01/main.html
@@ -14,7 +14,7 @@
   <div class="container">
 
     <div class="item">
-      <video id="remoteVideo" autoplay playsinline></video>
+      <video playsinline id="remoteVideo" controls preload="metadata" autoplay></video>
     </div>
     <div class="item">1</div>
     <div class="item">2</div>
