--- a/Webpage Step01/index.html
+++ b/Webpage Step01/index.html
@@ -6,11 +6,12 @@
   <link rel="stylesheet" href="css/style_index.css">
 </head>
 <body>
-  <h1><a href="index.html">Learning Point</a></h1>
-  <ol><a href="main.html">New</a></ol>
-  <p>
-    by KOREA AEROSPACE UNIVERSITY
-  </p>
+  <h1><a id="h" href="index.html">Learning Point</a></h1>
+  <div></br></br>Please click the button.</br>by KOREA AEROSPACE UNIVERSITY</div>
+  <div>
+    <button><a href="main.html">Join</a></button>
+  </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/roomName.js"></script>
