--- a/Webpage Step01/main.html
+++ b/Webpage Step01/main.html
@@ -12,36 +12,16 @@
   <button id="startButton">Start</button>
   <button id="callButton">Call</button>
   <button id="hangupButton">Hang Up</button>
-  <!-- recode -->
-  <div>
-    <button id="record" disabled>Start Recording</button>
-    <button id="play" disabled>Play</button>
-    <button id="download" disabled>Download</button>
-  </div>
+  <button id="record" disabled>Start Recording</button>
+  <button id="play" disabled>Play</button>
+  <button id="download" disabled>Download</button>
+  <hr>
 
-  <div class="container">
+  <div id="local"><video id="localVideo" autoplay playsinline></video></div>
+  <div id="remote"><video playsinline id="remoteVideo" controls preload="metadata"></video></div>
+  <div id="recording"><video id="recorded" autoplay></video></div>
+  <div class="item"><video id="gum" autoplay></video></div>
 
-    <div class="item">
-      <video playsinline id="remoteVideo" controls preload="metadata"></video>
-    </div>
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-
-    <div class="item">
-      <!-- 디바이스 카메라 연결-->
-      <video id="localVideo" autoplay playsinline></video>
-    </div>
-    <div class="item">
-      <video id="recorded" width="640" height="320"autoplay></video>
-    </div>
-    <div class="item">
-      <video id="gum" autoplay></video>
-    </div>
-  </div>
-  <p>
-    by KOREA AEROSPACE UNIVERSITY
-  </p>
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/main.js"></script>
 </body>
