--- a/Webpage Step01/index.html
+++ b/Webpage Step01/index.html
@@ -4,6 +4,16 @@
   <title>Learning Point</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style_index.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149631135-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149631135-1');
+</script>
 </head>
 <body>
   <h1><a id="h" href="index.html">Learning Point</a></h1>
