--- a/WebChat/index.html
+++ b/WebChat/index.html
@@ -18,11 +18,11 @@
         <form action="">
             <input id="m" autocomplete="off" /><button>Send</button>
         </form>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="/socket.io/socket.io.js">//아마 이것도 바꿔야하고</script> 
         <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
         <script>
-            $(function (){
-                var socket = io()
+            $(document).ready(function (){
+                var socket = io()// 이부분에 실제 ip 주소가 들어가야한다는데..
                 $('form').submit(function(){
                     socket.emit('chat message', $('#m').val())
                     $('#m').val('')
